--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,13 @@
 cmake_minimum_required(VERSION 3.0.0)
-project(train VERSION 0.1.0)
+project(serialize_json VERSION 0.1.0)
 
 include(CTest)
 enable_testing()
 
-add_executable(train main.cpp)
-
-find_package (Boost COMPONENTS unit_test_framework REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
-target_link_libraries(train PRIVATE nlohmann_json::nlohmann_json)
+add_executable(serialize_json main.cpp)
 
-enable_testing()
-
-add_test(NAME Test1 COMMAND train)
-
+target_link_libraries(serialize_json PRIVATE nlohmann_json::nlohmann_json)
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
